# Ph_project

./: .flake8  pyproject.toml
docstring/: 9_1.py  isort.py
other_direct/: dir_2.py  file_2.txt
pro_git/: file1.py  file2.py  git_pro.py
tests/: test_utils.py
utils/: error_file.py  example.py  greeting.py  import.py  inform_file.txt  lib_OS.py  shopping_list.txt  work_files.py
