[tool.poetry]
name = "ph-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#start-tests = 'package-my_poetry.tests:main'

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '(^|/)(greeting.py)$'

[tool.poetry.scripts]
start-tests = 'tests.test_utils:main'

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




